# environment_jupyter_docker

./: .gitignore  Dockerfile  README.md  docker-compose.yml
init/etc/jupyterhub/: add_user.sh  jupyter_notebook_config.py  jupyter_run.sh  jupyterhub_config.py
init/exec/venvs/jupyter/: pyproject.toml
init/exec/venvs/sample/: pyproject.toml
