[tool.poetry]
name = "3-12-3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "3"}]

[tool.poetry.dependencies]
python = "^3.12"
jupyterhub = "^4.1.5"
notebook = "^7.1.3"
jupyterlab = "^4.1.6"
netifaces = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
